// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckBox /> should match the snapshot for a checked check 1`] = `
<div
  class="root checkbox checked"
>
  <input
    checked=""
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base selected"
  >
    <svg
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M448 149.333l-256 256L74.667 288l30.08-30.08L192 344.96l225.92-225.707 30.08 30.08z"
      />
    </svg>
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    check label 1
  </label>
</div>
`;

exports[`<CheckBox /> should match the snapshot for a single check with no value or label 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value=""
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  />
</div>
`;

exports[`<CheckBox /> when with component child should match the snapshot 1`] = `
<div
  class="root checkbox"
>
  <input
    class="nativeInput"
    name=""
    type="checkbox"
    value="1"
  />
  <div
    class="checkable base"
  >
    <div
      class="box"
    />
  </div>
  <div
    class="focusRect"
  />
  <label
    class="label"
  >
    <h1
      class="root sizeScale8"
    >
      Hello checkbox
    </h1>
  </label>
</div>
`;
